--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.14.1",
