--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-time-ago": "^7.1.3",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.14.1",
@@ -29,6 +30,7 @@
     "eslint-plugin-testing-library": "4.11.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.0.6",
+    "msw": "^0.35.0",
     "react-test-renderer": "17.0.2"
   }
 }
