--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
+  "env": {
+    "jest": true
+  },
   "root": true,
   "extends": ["next/core-web-vitals", "airbnb-base", "prettier"],
   "rules": {
