--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "bootstrap": "^5.1.3",
     "javascript-time-ago": "^2.3.10",
     "next": "latest",
@@ -32,5 +33,8 @@
     "jest": "27.0.6",
     "msw": "^0.35.0",
     "react-test-renderer": "17.0.2"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
